# Sales-Reinforcement-Learning-Agent

./: .gitattributes  .gitignore  COMPLETE_TESTING_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  pyproject.toml  pytest.ini  requirements.txt
checkpoints/: agent_final.pkl
checkpoints_old/: agent_final_old_encoding.pkl
docs/: ARCHITECTURE.md  ARCHITECTURE_SIMPLE.md  BATCH_LEVEL_BALANCING_EXPLAINED.md  COMMANDS_TO_RUN.md  COMPLETE_WORKFLOW.md  CURRENT_STATUS.md  DATA_SCIENCE_INTERVIEW_INSIGHTS.md  DOCUMENTATION_INDEX.md  DQN_DEEP_DIVE_SIMPLE_EXPLANATION.md  DQN_IMPLEMENTATION_COMPLETE.md  DQN_VS_Q_LEARNING_FINAL_SUMMARY.md  EDUCATION_COLUMN_ANALYSIS.md  EDUCATION_COLUMN_FIX_SUMMARY.md  EDUCATION_ENCODING_ISSUE_SUMMARY.md  EDUCATION_FIX_IMPLEMENTATION.md  EDUCATION_ISSUE_VISUAL.md  FEATURE_SELECTION_DESIGN.md  FINAL_COMMIT_CHECKLIST.md  FINAL_SUMMARY.md  GITHUB_SETUP.md  IMPLEMENTATION_COMPLETE.md  INSIGHTS_EXPLAINED_SIMPLE.md  LOGGING_USAGE_GUIDE.md  ML_ENGINEERING_INTERVIEW_INSIGHTS.md  NEXT_ALGORITHMS_AFTER_Q_LEARNING.md  PHASE_2_PYTEST_IMPLEMENTATION.md  PHASE_2_PYTEST_NUANCES.md  PHASE_2_QUICK_START.md  PHASE_3_CI_CD_IMPLEMENTATION.md  PHASE_3_FINAL_SUMMARY.md  PHASE_3_QUICK_START.md  PHASE_3_TROUBLESHOOTING_AND_WHY.md  PROJECT_ARCHITECTURE_AND_VISUALIZATION_GUIDE.md  PROJECT_INTERVIEW_ALIGNMENT.md  Q_LEARNING_EXPLAINED.md  Q_LEARNING_TO_DQN_TRANSITION.md  README_UPDATED.md  README_old.md  RESULTS_EXPLAINED.md  TENSORBOARD_VS_MATPLOTLIB_DECISION.md  (+5 more)
logs/: feature_analysis_results.json  metrics_episode_10000.json  metrics_episode_20000.json  (+9 more)
(+36 files in other folders)
